# PythonHPC

./: .gitignore  haversine_1loop.py.lprof  main.py  pyproject.toml
Project/: cupy_fused.py  explore.ipynb  floorplan.csv  script.sh  script_cupy.sh  script_cupy_batched.sh  script_dynamic_numba.sh  script_dynamic_schedule.sh  script_full_numba.sh  script_static_schedule.sh  simulate.py  simulate.py.lprof  simulate_100_floors_dynamic.out  simulate_100_floors_static.out  simulate_20_floors_kernprof.out  simulate_20_floors_static.out  simulate_cuda.py  simulate_cuda_atol.py  simulate_cuda_batched.py  simulate_cuda_optim.py  simulate_cupy.py  simulate_cupy_batched.py  simulate_cupy_naive.py  simulate_dynamic.py  simulate_dynamic_numba.py  simulate_static.py  summary.sh  timed.sh
Project/logs/: simulate_100_floors_cupy_batched.out  simulate_100_floors_dynamic.err  simulate_100_floors_dynamic_numba.out  simulate_100_floors_dynamic_numba_1.out  (+4 more)
W1/: filehelloworld.py  simplest.sh  simplest_16cores.sh  simplest_4core.sh  simplest_64cores.sh  simplest_notification.sh  simplest_specific.sh  template.sh
W2/: basics.py  grade.py
W3/: blosc.sh  blosc_randint.py  blosc_tiled.py  blosc_zeros.py  column_vs_row.py  column_vs_row.sh
W4/: funcs.py  haversine.sh  haversine_0loop.py  haversine_1loop.py  haversine_1loop.sh  haversine_1loop_line.sh
W56/: mandelbrot.py  mandelbrot.sh  mean_faces.py  output_28234023.err  timing_differences.sh
W7/: panda_data.py  parrrow.py  pparquet.py  precip.py  tmp.ipynb
W8/: chunk_load.py  downsample.py  mandebrot_mm.py  mandelbrot_zarr.py
