[project]
name = "pythonhpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blosc>=1.11.4",
    "line-profiler>=5.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyarrow>=23.0.1",
]
